Linux utility for listing SCSI devices.

Changelog for pre-release lsscsi-0.33 [20230523] [svn: r185]
  - experimental: add --json[=JO] and --js-file=JFN for
    JSON output; changed short form syntax to -j[=JO]
  - change '-w' output to step over designator type prefix
    (e.g. '3' for NAA)
  - add '-ww' to mean: really use
    /dev/disk/by-id/wwn-* rather than .../by-id/scsi-*
  - document that --scsi_id (-i) now is prefixed by a
    "from whence" character from "328S10"
  - add '-ii' to mean show identifier without that prefix
  - clean up '-t' output for SAS (RAID) logical disks
  - improve handling of smartpqi scsi host
  - "nvme-generic" devices (e.g. /dev/ng0n1) now processed
    and shown when the --generic option is given
  - with NVMe device single line output, reduce model
    string length to 30 (was 41) to align columns better
  - build_debian.sh: build without signatures
  - add JSON builder code borrowed from sg3_utils
  - remove the imtermediate files generated by ./autogen.sh
    - this reduces size of svn and git repositories but still
      plan to have these intermediate files in release tarballs

Changelog for released lsscsi-0.32 [20210505] [svn: r167]
  - improve NVMe device parsing (e.g. /dev/nvme0c1n2)
  - print nr_hw_queues when available for SCSI hosts
  - Remove blank line after NVMe device name with -HL
  - collect_disk_wwn_nodes: Fix WWN string copy
  - make WWN printing for NVMe more consistent with
    output from SCSI devices (e.g. with -u and -t)
  - logic to select best SCSI id (--scsi_id) to output
  - clean up warnings for gcc-10
  - build with autoconf 2.70

Changelog for released lsscsi-0.31 [20200220] [svn: r160]
  - cleanup gcc-8 warnings, no cleanup needed for gcc-9
  - fix issue where host managed ZBC devices don't
    output their size. [Fix also for RBC and CD/DVD.]
  - exclude NVMe listings when --classic given
  - fix hex counting issues
  - supply "-" for generic NVMe device one line output