@@ -1,4 +1,4 @@
-SUBDIRS =	src doc
+SUBDIRS =	src doc scripts
 
 EXTRA_DIST=autogen.sh
 
