@@ -35,4 +35,4 @@ AC_ARG_ENABLE([debug],
                esac],[debug=false])
 AM_CONDITIONAL([DEBUG], [test x$debug = xtrue])
 
-AC_OUTPUT(Makefile src/Makefile doc/Makefile)
+AC_OUTPUT(Makefile src/Makefile doc/Makefile scripts/Makefile)
