@@ -1,3 +1,3 @@
 
-man_MANS = lsscsi.8 lsscsi_json.8
+man_MANS = lsscsi.8 lsscsi_json.8 ls_name_value.8
 
