@@ -57,7 +57,7 @@ This manpage discusses the \fI\-\-json[=JO]\fR and \fI\-\-js\-file=JFN\fR
 command line options. Notice that the argument to \fI\-\-json\fR is itself
 optional. In its shorter form the \fI\-\-json\fR option may either be
 \fI\-j\fR or \fI\-J\fR (lower case preferred if not already in use). The
-shorter form may also take an argument but an "=" must precede the \fIJO\f
+shorter form may also take an argument but an "=" must precede the \fIJO\fR
 argument with no spaces either side of the "=".
 .PP
 Some care has been taken with quotes in this manpage. Double quotes are used
