@@ -1,0 +1,1 @@
+dist_bin_SCRIPTS = ls_name_value
