@@ -1,8 +1,9 @@
 Linux utility for listing SCSI devices.
 
-Changelog for pre-release lsscsi-0.33 [20230523] [svn: r185]
+Changelog for pre-release lsscsi-0.33 [20230523] [svn: r186]
   - experimental: add --json[=JO] and --js-file=JFN for
     JSON output; changed short form syntax to -j[=JO]
+  - add ls_name_value sysfs overview script
   - change '-w' output to step over designator type prefix
     (e.g. '3' for NAA)
   - add '-ww' to mean: really use
